--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<p>Random Dots_ <a href="index-hw2.html">Poject.2</a></p>
 	<p>Form Generator_ <a href="index-hw3.html">Poject.3</a></p>
 	
-<img src="../../Downloads/franco-antonio-giovanella-g95sf8-fEQg-unsplash.jpg" width="660" height="974" alt=""/>
+<img src="franco-antonio-giovanella-g95sf8-fEQg-unsplash.jpg" width="660" height="974" alt=""/>
 	
 </body>
 </html>
